change image tag

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -21,7 +21,7 @@ spec:
         app: capstone
     spec:
       containers:
-        - image: leoadams/capstone-udacity
+        - image: leoadams/capstone-udacity:latest
           imagePullPolicy: Always
           name: capstone
           ports:
